--- a/index.html
+++ b/index.html
@@ -97,11 +97,13 @@
     <div class="content">
         <div class="card-container">
             <div class="card">
-                <h2>Test 1</h2>
-                <p>This is the description of the first test. Minimalist and simple design.</p>
+                <h2>Test of Insight</h2>
+                <p>In a world where many look, but few truly see, this test separates the ordinary from the extraordinary. Unlock the secrets that lie beneath the surface. Only the observant will succeed.
+</p>
             </div>
             <div class="card">
-                <h2>Test 2</h2>
-                <p>This is the description of the second test. Minimalist and simple design.</p>
+                <h2>Challenge of Precision</h2>
+                <p>Every move counts, every decision shapes the outcome. Are you prepared to make the right choice? Precision is key—those who master it will reveal the path to the next level.
+</p>
             </div>
         </div
