--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         }
 
         .text {
-            font-size: 20vw; /* Размер текста в зависимости от ширины окна */
+            font-size: 40vw; /* Размер текста в зависимости от ширины окна */
             color: rgba(255, 255, 255, 0.1); /* Очень полупрозрачный текст */
             position: absolute;
             z-index: 1;
@@ -137,7 +137,7 @@
 
     <!-- Contact Button Section -->
     <div class="contact">
-        <a href="ssa1.html">Contact us</a>
+        <a href="https://ssa-llc.github.io/ssa-/">Contact us</a>
     </div>
 
     <!-- Footer Section -->
