--- a/index.html
+++ b/index.html
@@ -4,112 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SSA</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Roboto', sans-serif;
-            background-color: #1a1a1a;
-            color: #fff;
-        }
-
-        .hero {
-            height: 100vh;
-            background-image: url('https://c.wallhere.com/photos/e5/19/Lamborghini_Countach_Countach_25th_Anniversary_white_cars_photography-2282764.jpg!d'); /* Укажи путь к своей картинке */
-            background-size: cover;
-            background-position: center;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: relative;
-        }
-
-        .overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background-color: rgba(0, 0, 0, 0.5); /* Полупрозрачный слой */
-        }
-
-        .text {
-            font-size: 40vw; /* Размер текста в зависимости от ширины окна */
-            color: rgba(255, 255, 255, 0.1); /* Очень полупрозрачный текст */
-            position: absolute;
-            z-index: 1;
-            text-align: center;
-        }
-
-        .content {
-            padding: 50px 20px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        .card-container {
-            display: flex;
-            gap: 20px;
-            justify-content: center;
-            width: 100%;
-        }
-
-        .card {
-            background-color: #2e2e2e;
-            border-radius: 10px;
-            padding: 20px;
-            width: 40%; /* Ширина карточки по 40% от экрана */
-            text-align: center;
-            transition: background-color 0.3s ease;
-        }
-
-        .card:hover {
-            background-color: #3e3e3e;
-        }
-
-        h2 {
-            font-size: 24px;
-            margin-bottom: 10px;
-        }
-
-        p {
-            font-size: 16px;
-        }
-
-        footer {
-            margin-top: 50px;
-            padding: 20px;
-            background-color: #333;
-            text-align: center;
-        }
-
-        .contact {
-            margin: 30px 0;
-            text-align: center;
-        }
-
-        .contact a {
-            text-decoration: none;
-            color: #fff;
-            padding: 10px 20px;
-            background-color: #444;
-            border-radius: 5px;
-            transition: background-color 0.3s ease, color 0.3s ease;
-        }
-
-        .contact a:hover {
-            background-color: #fff; /* Изменение цвета фона на белый */
-            color: #444; /* Изменение текста на темный при наведении */
-        }
-
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -124,20 +19,20 @@
         <div class="card-container">
             <div class="card">
                 <h2>Test of Insight</h2>
-                <p>In a world where many look, but few truly see, this test separates the ordinary from the extraordinary. Unlock the secrets that lie beneath the surface. Only the observant will succeed.
-</p>
+                <p>In a world where many look, but few truly see, this test separates the ordinary from the extraordinary. Unlock the secrets that lie beneath the surface. Only the observant will succeed.</p>
             </div>
             <div class="card">
                 <h2>Challenge of Precision</h2>
-                <p>Every move counts, every decision shapes the outcome. Are you prepared to make the right choice? Precision is key—those who master it will reveal the path to the next level.
-</p>
+                <p>Every move counts, every decision shapes the outcome. Are you prepared to make the right choice? Precision is key—those who master it will reveal the path to the next level.</p>
             </div>
         </div>
     </div>
 
     <!-- Contact Button Section -->
-    <div class="contact">
-        <a href="https://ssa-llc.github.io/ssa-/">Contact us</a>
+    <div class="contact-container">
+       <!-- Измененная часть в index.html -->
+<a href="https://ssa-llc.github.io/ssa-/" class="contact-button">Contact us</a>
+
     </div>
 
     <!-- Footer Section -->
