--- a/index.html
+++ b/index.html
@@ -3,7 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SSA</title>
+    <meta name="description" content="SSA - Private business projects with a minimalist and mysterious design approach. Connect with us for more details.">
+    <meta name="keywords" content="business, private, minimalistic, SSA, contact">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://ssa-llc.github.io/ssa-/">
+    <title>SSA - Private Business Projects</title>
+
+    <!-- Open Graph Metadata -->
+    <meta property="og:title" content="SSA - Private Business Projects">
+    <meta property="og:description" content="Connect with us for private and mysterious business opportunities.">
+    <meta property="og:url" content="https://ssa-llc.github.io/ssa-/">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="URL_TO_IMAGE">
+
+    <!-- Schema.org Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "SSA",
+      "url": "https://ssa-llc.github.io/ssa-/",
+      "description": "SSA focuses on private business ventures with a focus on minimalistic design.",
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "contactType": "Customer Service",
+        "url": "https://ssa-llc.github.io/ssa-/contact"
+      }
+    }
+    </script>
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -29,10 +57,8 @@
     </div>
 
     <!-- Contact Button Section -->
-    <div class="contact-container">
-       <!-- Измененная часть в index.html -->
-<a href="https://ssa-llc.github.io/ssa-/" class="contact-button">Contact us</a>
-
+    <div class="contact">
+        <a href="https://ssa-llc.github.io/ssa-/">Contact us</a>
     </div>
 
     <!-- Footer Section -->
