--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       "contactPoint": {
         "@type": "ContactPoint",
         "contactType": "Customer Service",
-        "url": "https://ssa-llc.github.io/ssa-/contact"
+        "url": "https://ssa-llc.github.io/ssa-/"
       }
     }
     </script>
@@ -57,8 +57,8 @@
     </div>
 
     <!-- Contact Button Section -->
-    <div class="contact">
-        <a href="https://ssa-llc.github.io/ssa-/">Contact us</a>
+<div class="contact">
+        <a href="https://ssa-llc.github.io/ssa-/contact">Contact us</a>
     </div>
 
     <!-- Footer Section -->
