--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <!-- Contact Button Section -->
 <div class="contact">
-        <a href="https://ssa-llc.github.io/ssa-/contact">Contact us</a>
+        <a href="https://ssa-llc.github.io/ssa-/">Contact us</a>
     </div>
 
     <!-- Footer Section -->
