--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@
     </script>
 
     <link rel="stylesheet" href="style.css">
+
+<!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9TGTC29717"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-9TGTC29717');
+</script>
+
 </head>
 <body>
 
