--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <!-- Contact Button Section -->
 <div class="contact">
-        <a href="https://ssa-llc.github.io/ssa-/">Contact us</a>
+        <a href="https://ssa-llc.github.io/contact/">Contact us</a>
     </div>
 
     <!-- Footer Section -->
