--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <!-- Footer Section -->
     <footer>
-        <p>All rights reserved SSA LLC&copy; 2024</p>
+        <p>All rights reserved &copy; 2024</p>
     </footer>
 
 </body>
